<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvJudulKertas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/comic_neueb_old"
        android:rotation="-20"
        android:text="@string/judulkertas"
        android:textColor="#FF9800"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvJudulBatu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="-18dp"
        android:fontFamily="@font/comic_neueb_old"
        android:rotation="-20"
        android:text="@string/judulbatu"
        android:textColor="#9C27B0"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvJudulGunting" />

    <TextView
        android:id="@+id/tvJudulGunting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-18dp"
        android:fontFamily="@font/comic_neueb_old"
        android:rotation="-20"
        android:text="@string/judulgunting"
        android:textColor="#4CAF50"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvJudulKertas" />

    <TextView
        android:id="@+id/tvggPemain1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50sp"
        android:fontFamily="@font/comic_neueb_old"
        android:text="@string/ggplayer1"
        android:textColor="#03A9F4"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvJudulBatu" />

    <TextView
        android:id="@+id/tvggCOM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="45sp"
        android:fontFamily="@font/comic_neueb_old"
        android:text="@string/ggCOM"
        android:textColor="#03A9F4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvJudulBatu" />

    <ImageView
        android:id="@+id/ivPemain1Batu"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/pemain_1_batu"
        android:src="@drawable/batu"
        app:layout_constraintEnd_toEndOf="@id/tvggPemain1"
        app:layout_constraintStart_toStartOf="@id/tvggPemain1"
        app:layout_constraintTop_toBottomOf="@id/tvggPemain1" />

    <ImageView
        android:id="@+id/ivComBatu"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="11dp"
        android:contentDescription="@string/com_batu"
        android:src="@drawable/batu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvggCOM" />

    <ImageView
        android:id="@+id/ivComKertas"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/com_kertas"
        android:src="@drawable/kertas"
        app:layout_constraintEnd_toEndOf="@id/ivComBatu"
        app:layout_constraintStart_toStartOf="@id/ivComBatu"
        app:layout_constraintTop_toBottomOf="@id/ivComBatu" />

    <ImageView
        android:id="@+id/ivPemain1Kertas"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/pemain_1_kerta"
        android:src="@drawable/kertas"
        app:layout_constraintEnd_toEndOf="@id/ivPemain1Batu"
        app:layout_constraintStart_toStartOf="@id/ivPemain1Batu"
        app:layout_constraintTop_toBottomOf="@id/ivPemain1Batu" />

    <ImageView
        android:id="@+id/ivPemain1Gunting"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/pemain_1_gunting"
        android:src="@drawable/gunting"
        app:layout_constraintEnd_toEndOf="@id/ivPemain1Kertas"
        app:layout_constraintStart_toStartOf="@id/ivPemain1Kertas"
        app:layout_constraintTop_toBottomOf="@id/ivPemain1Kertas" />

    <ImageView
        android:id="@+id/ivComGunting"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/com_gunting"
        android:src="@drawable/gunting"
        app:layout_constraintEnd_toEndOf="@id/ivComKertas"
        app:layout_constraintStart_toStartOf="@id/ivComKertas"
        app:layout_constraintTop_toBottomOf="@id/ivComKertas" />

    <ImageView
        android:id="@+id/Refresh"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/tombol_refresh"
        android:src="@drawable/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/ivComGunting"
        app:layout_constraintStart_toStartOf="@id/ivComGunting" />

    <TextView
        android:id="@+id/tvVS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-150dp"
        android:fontFamily="@font/comic_neueb_old"
        android:rotation="-20"
        android:text=""
        android:textColor="#E91E63"
        android:textSize="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvJudulBatu" />

    <TextView
        android:id="@+id/tvHasilnotdraw"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginTop="-150dp"
        android:fontFamily="@font/comic_neueb_old"
        android:gravity="center"
        android:rotation="-15"
        android:text=""
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvJudulBatu" />

    <TextView
        android:id="@+id/tvHasilDraw"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="-150dp"
        android:fontFamily="@font/comic_neueb_old"
        android:gravity="center"
        android:rotation="-15"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvJudulBatu" />
</androidx.constraintlayout.widget.ConstraintLayout>